# ChangeLog for dev-python/see
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  22 Dec 2010; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Added missing PYTHON_MODNAME.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> -see-1.0.0.ebuild,
  see-1.0.1.ebuild:
  Keyworded x86.

  10 Dec 2010; James Rowe <jnrowe@gmail.com> see-1.0.1.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*see-1.0.1 (05 Nov 2010)

  05 Nov 2010; James Rowe <jnrowe@gmail.com> +see-1.0.1.ebuild:
  Version bump [213].

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  09 Sep 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded x86.

  09 Sep 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded amd64.

  10 Aug 2010; James Rowe <jnrowe@gmail.com> see-1.0.0.ebuild:
  Keyworded ~x86.

*see-1.0.0 (10 Aug 2010)

  10 Aug 2010; James Rowe <jnrowe@gmail.com> +see-1.0.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
